--- a/app/src/main/res/layout/activity_pairing.xml
+++ b/app/src/main/res/layout/activity_pairing.xml
@@ -5,6 +5,17 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="연결된 기기가 존재하지 않습니다."
+        android:id="@+id/statusText"
+        android:layout_gravity="center"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:textColor="@color/black"
+        android:textSize="18dp"/>
+
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
