--- a/app/src/main/res/layout/activity_pairing.xml
+++ b/app/src/main/res/layout/activity_pairing.xml
@@ -73,11 +73,27 @@
 
     </LinearLayout>
 
-    <Button
-        android:id="@+id/cancelButton"
-        android:text="뒤로가기"
-        android:layout_gravity="center_horizontal"
-        android:layout_margin="16dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/cancelButton"
+            android:text="뒤로가기"
+            android:layout_marginRight="100dp"
+            android:gravity="center_horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:id="@+id/testBtn"
+            android:text="테스트"/>
+
+    </LinearLayout>
+
 </LinearLayout>
