--- a/app/src/main/res/layout/activity_bluetooth.xml
+++ b/app/src/main/res/layout/activity_bluetooth.xml
@@ -9,9 +9,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Android 코드 모음"
-        android:textSize="25dp"
-        android:textColor="@color/black"/>
+        android:text="현재 위치 : Bluetooth Activity"
+        android:textColor="@color/black" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -21,14 +20,14 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/bluetoothActivityButton"
-            android:text="블루투스"/>
+            android:id="@+id/bluetoothOnBtn"
+            android:text="Bluetooth ON"/>
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/alarmActivityButton"
-            android:text="알람 / 푸쉬"
+            android:id="@+id/bluetoothOffBtn"
+            android:text="Bluetooth OFF"
             android:layout_marginLeft="15dp"/>
     </LinearLayout>
 
@@ -40,15 +39,22 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/splashActivityButton"
-            android:text="스플래쉬"/>
+            android:text="페어링 액티비티 이동"
+            android:id="@+id/pairingBtn"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal">
 
         <Button
+            android:id="@+id/backButton"
+            android:text="뒤로가기"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/test2"
-            android:text="공사중"
-            android:layout_marginLeft="15dp"/>
+            android:layout_height="wrap_content" />
+
     </LinearLayout>
 
 </LinearLayout>
