--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,8 +46,8 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/test2"
-            android:text="공사중"
+            android:id="@+id/FcmActivityButton"
+            android:text="FCM"
             android:layout_marginLeft="15dp"/>
     </LinearLayout>
 
